src/components/layout.css
@font-face{
  font-family: 'JetBrains Mono';
  src: url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/webfonts/JetBrainsMono-Regular.eot') format('embedded-opentype'),
  url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/webfonts/JetBrainsMono-Regular.woff2') format('woff2'),
  url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/webfonts/JetBrainsMono-Regular.woff') format('woff'),
  url('https://raw.githubusercontent.com/JetBrains/JetBrainsMono/master/fonts/ttf/JetBrainsMono-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

:root {
  --main-color: #3D414D
}

* {
  margin: 0;
  box-sizing: border-box;
  line-height: 1.4;
  z-index: 500;
}

html {
  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}
body {
  top: 0;
  left: 0;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body.disabled {
  overflow: hidden;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
  display: block;
}
audio,
canvas,
progress,
video {
  display: inline-block;
}
audio:not([controls]) {
  display: none;
  height: 0;
}
progress {
  vertical-align: baseline;
}
[hidden],
template {
  display: none;
}

a {
  background-color: transparent;
  text-decoration: none;
  -webkit-text-decoration-skip: objects;
}
a:active,
a:hover {
  outline-width: 0;
}
@media (prefers-color-scheme: dark) {
  body {
    background-color: var(--main-color);
    color: white;
  }

  a {
    color: white;
  }

  a:hover:not(.noLint) {
    background: white;
    color: var(--main-color);
  }

  a:hover span.lint {
    background: white;
    color: var(--main-color);
  }

  h1 > span {
    background: white;
    color: var(--main-color);
  }
}

@media (prefers-color-scheme: light) {
  a {
    color: var(--main-color);
  }

  a:hover:not(.noLint) {
    background: var(--main-color);
    color: white;
  }

  a:hover span.lint {
    background: var(--main-color);
    color: white;
  }

  h1 > span {
    background: var(--main-color);
    color: white;
  }
}

h1 {
  width: fit-content;
  font-size: 64px;
  margin-bottom: 24px;
  padding-left: 2px;
  padding-right: 4px;
}

h1 > span {
  padding-left: 2px;
  padding-right: 4px;
}

@media screen and (max-width: 998px) {
  h1 {
    font-size: 54px;
  }
}

@media screen and (max-width: 480px) {
  h1 {
    font-size: 48px;
  }
}

@media screen and (max-width: 360px) {
  h1 {
    font-size: 36px;
  }
}

h2 {
  width: fit-content;
  font-size: 56px;
  margin-bottom: 16px;
}

h3 {
  width: fit-content;
  font-size: 36px;
  margin-bottom: 12px;
}

h4 {
  width: fit-content;
  font-size: 24px;
  margin-bottom: 8px;
}

h5 {
  width: fit-content;
  font-size: 20px;
  margin-bottom: 8px;
}

h6 {
  font-size: 16px;
  margin-bottom: 4px;
}

body {
  padding: 0 5rem 3rem;
}

@media screen and (max-width: 998px) {
  body {
    padding-left: 3rem;
    padding-right: 3rem;
  }
}

@media screen and (max-width: 500px) {
  body {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

section:not(.title) {
  width: 100%;
  margin-top: 48px;
  margin-bottom: 64px;
}

@media screen and (min-width: 760px) {
  section:not(.title) {
    width: 67%;
  }
}

@media screen and (min-width: 760px){
  .page-title > * {
    display: inline-block;
    margin-bottom: 0;
    margin-right: 16px;
  }
  .page-title {
    margin-bottom: 24px;
  }
}

section section {
  margin-bottom: 32px !important;
}

.hidden {
  display: none;
}

.active {
  display: block !important;
}

.footer-badge {
  margin-bottom: -2px;
  width: 16px;
  height: 16px;
}

.line-through {
  text-decoration: line-through;
  color: grey;
}

.text-xs {
  font-size: 10px;
  font-weight: 400;
}

